--- a/src/components/MovieListItem/style.less
+++ b/src/components/MovieListItem/style.less
@@ -1,4 +1,4 @@
-.article {
+.movie-list-item {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
@@ -8,6 +8,7 @@
 	margin-top: 10px;
 	padding: 0 10px;
 	border: 2px solid green;
+	box-sizing: border-box;
 	.img {
 		width: 200px;
 		height: 300px;
