--- a/src/components/MovieListItem/style.less
+++ b/src/components/MovieListItem/style.less
@@ -4,15 +4,14 @@
 	justify-content: space-between;
 	align-items: center;
 	width: 100%;
-	height: 320px;
+	height: 300px;
 	margin-top: 10px;
 	padding: 0 10px;
-	border: 2px solid green;
 	box-sizing: border-box;
+	background-color: #DDD;
 	.img {
 		width: 200px;
 		height: 300px;
-		border: 1px solid black;
 	}
 	.info {
 		display: flex;
