--- a/src/components/MovieListItem/style.less
+++ b/src/components/MovieListItem/style.less
@@ -20,8 +20,11 @@
 		align-items: center;
 		width: 50%;
 		height: 100%;
-		h3 {
-			color: blue;
+		a {
+			color: #222;
+			font-size: 14pt;
+			text-decoration: underline;
+			font-weight: bold;
 		}
 		p {
 			font-style: italic;
