MLI: a { cursor: pointer}

--- a/src/components/MovieListItem/style.less
+++ b/src/components/MovieListItem/style.less
@@ -25,6 +25,7 @@
 			font-size: 14pt;
 			text-decoration: underline;
 			font-weight: bold;
+			cursor: pointer;
 		}
 		p {
 			font-style: italic;
