--- a/src/components/MovieListItem/style.less
+++ b/src/components/MovieListItem/style.less
@@ -9,6 +9,7 @@
 	padding: 0 10px;
 	box-sizing: border-box;
 	background-color: #DDD;
+	border-radius: 10px;
 	.img {
 		width: 200px;
 		height: 300px;
