--- a/src/components/Button/style.less
+++ b/src/components/Button/style.less
@@ -1,19 +1,23 @@
 .btn {
     align-items: center;
     background: rgba(255, 255, 255, 0);
-    border: 2px solid #e94112;
+    border: 2px solid #222;
+    border-radius: 5px;
     display: flex;
     font-weight: 600;
     letter-spacing: 0.035em;
+    line-height: 20px;
     margin: 15px 0;
-    padding: 14px 25px;
+    /*padding: 14px 25px;*/
+    padding: 5px 10px;
     transition: background 0.2s, color 0.2s;
     text-decoration: none;
+    user-select: none;
     &:hover {
-        background: #e94112;
-        color: #fff;
+        background: #222;
+        color: white;
     }
-    a:hover {
-        color: #000;
+    &.fav {
+        font-size: 20px;
     }
 }
