Search: input и button визуально соединены

--- a/src/components/Pagination/style.less
+++ b/src/components/Pagination/style.less
@@ -6,6 +6,9 @@
 	flex-direction: column;
 	input {
 		display: inline-block;
+		line-height: 20px;
+	    padding: 5px 10px;
+	    border: 2px solid #222;
 	}
 	button {
 		display: inline-block;
