--- a/src/components/Search/style.less
+++ b/src/components/Search/style.less
@@ -1,4 +1,17 @@
 .search {
 	display: flex;
 	align-items: center;
+	input {
+		line-height: 20px;
+	    padding: 5px 10px;
+	    border: 2px solid #222;
+	    border-top-left-radius: 5px;
+	    border-bottom-left-radius: 5px;
+	    border-right: 1px solid #222;
+	}
+	button {
+	    border-top-left-radius: 0px;
+	    border-bottom-left-radius: 0px;
+	    border-left: 1px solid #222;
+	}
 }
