--- a/src/components/Header/style.less
+++ b/src/components/Header/style.less
@@ -2,4 +2,8 @@ header {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	img {
+		height: 80px;
+		cursor: pointer;
+	}
 }
