id фильмов добавляются в избранное; исправлена ошибка в /helpers/localStorage

--- a/src/components/Button/style.less
+++ b/src/components/Button/style.less
@@ -13,11 +13,15 @@
     transition: background 0.2s, color 0.2s;
     text-decoration: none;
     user-select: none;
-    &:hover {
+    &:hover{
         background: #222;
         color: white;
     }
     &.fav {
         font-size: 20px;
+    }
+    &.selected{
+        background: #222;
+        color: white;
     }
 }
