--- a/src/components/Underlay/style.less
+++ b/src/components/Underlay/style.less
@@ -1,5 +1,8 @@
 .underlay {
-	position: absolute;
+	position: fixed;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	width: 100%;
 	height: 100%;
 	top: 0;
