--- a/src/components/SingleMovie/style.less
+++ b/src/components/SingleMovie/style.less
@@ -15,6 +15,33 @@
 			width: 200px;
 			height: 300px;
 		}
+		.info {
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+			width: 500px;
+			.title {
+				margin-bottom: 10px;
+				font-size: 14pt;
+				font-weight: bold;
+			}
+			.info-item {
+				display: flex;
+				justify-content: space-between;
+				.info-type {
+					width: 170px;
+					margin-right: 5px;
+					text-align: right;
+					font-style: italic;
+				}
+				.info-value {
+					width: 320px;
+					margin-left: 5px;
+					text-align: left;
+				}
+			}
+		}
 		button {
 
 		}
