--- a/src/components/SingleMovie/style.less
+++ b/src/components/SingleMovie/style.less
@@ -18,32 +18,40 @@
 		.info {
 			display: flex;
 			flex-direction: column;
-			justify-content: center;
+			justify-content: space-around;
 			align-items: center;
 			width: 500px;
+			height: 300px;
 			.title {
-				margin-bottom: 10px;
 				font-size: 14pt;
 				font-weight: bold;
 			}
-			.info-item {
+			.info-wrapper {
 				display: flex;
-				justify-content: space-between;
-				.info-type {
-					width: 170px;
-					margin-right: 5px;
-					text-align: right;
-					font-style: italic;
-				}
-				.info-value {
-					width: 320px;
-					margin-left: 5px;
-					text-align: left;
+				flex-direction: column;
+				.info-item {
+					display: flex;
+					justify-content: space-between;
+					border-bottom: 1px solid #BBB;
+					.info-type {
+						width: 170px;
+						margin-right: 5px;
+						text-align: right;
+						font-style: italic;
+					}
+					.info-value {
+						width: 320px;
+						margin-left: 5px;
+						text-align: left;
+					}
 				}
 			}
 		}
 		button {
 
 		}
+	}
+	.overview {
+		margin: 10px 0;
 	}
 }
