Button: cursor: pointer;

--- a/src/components/Button/style.less
+++ b/src/components/Button/style.less
@@ -16,6 +16,7 @@
     &:hover{
         background: #222;
         color: white;
+        cursor: pointer;
     }
     &.fav {
         font-size: 20px;
