--- a/src/components/SingleMovie/style.less
+++ b/src/components/SingleMovie/style.less
@@ -54,4 +54,19 @@
 	.overview {
 		margin: 10px 0;
 	}
+	.recommendations {
+		width: 765px;
+		.recommendations-header {
+			font-size: 12pt;
+			font-weight: bold;
+		}
+		.recommended-movies {
+			display: flex;
+			justify-content: space-between;
+			.recommended-movie {
+				
+				
+			}
+		}
+	}
 }
