Убрана рамка выделения вокруг кнопок

--- a/src/components/Button/style.less
+++ b/src/components/Button/style.less
@@ -12,6 +12,7 @@
     transition: background 0.2s, color 0.2s;
     text-decoration: none;
     user-select: none;
+    outline: none;
     &:hover{
         background: #222;
         color: white;
