Добавлены отступы для лого и кнопки "избранное"; увеличена ширина поля поиска

--- a/src/components/Header/style.less
+++ b/src/components/Header/style.less
@@ -5,6 +5,10 @@ header {
 	img {
 		height: 80px;
 		margin-top: 10px;
+		margin-left: 10px;
 		cursor: pointer;
+	}
+	button {
+		margin-right: 10px;
 	}
 }
