--- a/src/components/Search/style.less
+++ b/src/components/Search/style.less
@@ -8,6 +8,7 @@
 	    border-top-left-radius: 5px;
 	    border-bottom-left-radius: 5px;
 	    border-right: 1px solid #222;
+	    width: 255px;
 	}
 	button {
 	    border-top-left-radius: 0px;
