--- a/src/components/Button/style.less
+++ b/src/components/Button/style.less
@@ -22,8 +22,11 @@
     &.fav {
         font-size: 20px;
     }
-    &.selected{
+    &.selected {
         background: #222;
         color: white;
+        &:hover {
+            color: orange;
+        }
     }
 }
