--- a/src/components/MovieList/style.less
+++ b/src/components/MovieList/style.less
@@ -1,6 +1,12 @@
-.is-loading{
-	width: 100%;
+.movie-list {
+	min-height: 300px;
 	display: flex;
 	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	.is-loading{
+		width: 100%;
+		display: flex;
+		justify-content: center;
+	}
 }
-
