--- a/src/components/Pagination/style.less
+++ b/src/components/Pagination/style.less
@@ -9,11 +9,14 @@
 		line-height: 20px;
 	    padding: 5px 10px;
 	    border: 2px solid #222;
+	    margin-top: 10px;
+	    margin-bottom: 10px;
 	}
 	button {
 		display: inline-block;
 	}
 	p {
+		margin-top: 10px;
 		margin-bottom: 10px;
 	}
 }
