--- a/src/components/Header/style.less
+++ b/src/components/Header/style.less
@@ -3,7 +3,7 @@ header {
 	justify-content: space-between;
 	align-items: center;
 	img {
-		height: 80px;
+		width: 80px;
 		margin-top: 10px;
 		margin-left: 10px;
 		cursor: pointer;
