--- a/src/components/Pagination/style.less
+++ b/src/components/Pagination/style.less
@@ -4,16 +4,21 @@
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-	input {
-		display: inline-block;
-		line-height: 20px;
-	    padding: 5px 10px;
-	    border: 2px solid #222;
-	    margin-top: 10px;
-	    margin-bottom: 10px;
-	}
-	button {
-		display: inline-block;
+	.nav {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		input {
+			display: inline-block;
+			line-height: 20px;
+		    padding: 5px 10px;
+		    border: 2px solid #222;
+		    margin-top: 10px;
+		    margin-bottom: 10px;
+		}
+		button {
+			display: inline-block;
+		}
 	}
 	p {
 		margin-top: 10px;
