--- a/src/components/SingleMovie/style.less
+++ b/src/components/SingleMovie/style.less
@@ -6,6 +6,7 @@
 	box-sizing: border-box;
 	color: #222;
 	background-color: #DDD;
+	cursor: auto;
 	.general-info {
 		display: flex;
 		justify-content: space-between;
