Poster теперь используется в Recommentation

--- a/src/components/Recommendation/style.less
+++ b/src/components/Recommendation/style.less
@@ -4,7 +4,10 @@
 	align-items: center;
 	height: 225px;
 	.loading {
+		display: block;
+		width: 150px;
 		position: absolute;
+		text-align: center;
 		z-index: 1;
 	}
 	img {
