--- a/src/components/MovieList/style.less
+++ b/src/components/MovieList/style.less
@@ -1,9 +1,10 @@
 .movie-list {
-	min-height: 300px;
+	min-height: calc(100vh - 215px);
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
+	margin-bottom: 5px;
 	.is-loading{
 		width: 100%;
 		display: flex;
