--- a/src/style.less
+++ b/src/style.less
@@ -4,7 +4,7 @@
 	color: #222;
 }
 
-html, body {
+html, body, .app {
 	width: 100%;
 	height: 100%;
 }
@@ -14,4 +14,18 @@ html, body {
 	height: 100%;
 	margin: auto;
 	background-color: #F6F6F6;
+}
+
+.app {
+	display: flex;
+	flex-direction: column;
+	header {
+		flex: 0 0 auto;
+	}
+	.movie-list {
+		flex: 1 0 auto;
+	}
+	.pagination {
+		flex: 0 0 auto;
+	}
 }
